--- a/MIS/Views/PoliceSection/Create.cshtml
+++ b/MIS/Views/PoliceSection/Create.cshtml
@@ -3,7 +3,8 @@
 @model PoliceSection
 
 
-<form method="post" asp-action="Create">
+<form method="post" asp-action="Create" asp-controller="PoliceSection">
+    
     <div class="border p-3">
         <div class="form-group row">
             <h2 class="text-info text-center pl-3">Add police section</h2>
@@ -31,6 +32,17 @@
                     </div>
                     <div class="col-2">
                         <input asp-for="Address.Number" class="form-control" />
+                    </div>
+                </div>
+                <div class="form-group row">
+                    <div class="col-4">
+                        <label asp-for="RootPoliceman.Email">
+                        </label>
+                    </div>
+                    <div class="col-8">
+                        @*<input type="hidden" name="Id"  />*@
+                        <input name="email" />
+                        
                     </div>
                 </div>
                 @*<div class="form-group row">
