--- a/MIS/Views/PoliceSection/Hierarchy.cshtml
+++ b/MIS/Views/PoliceSection/Hierarchy.cshtml
@@ -2,6 +2,15 @@
 @model PoliceSection
 
 <style>
+    /**{
+        margin:0;
+        padding:0;
+    }*/
+    #map {
+        height: 500px;
+        width: 500px;
+    }
+
     span {
         border: 2px solid #fff !important;
         border-radius: 4px;
@@ -61,7 +70,7 @@
 
 
 
-   
+
 
 
     <div class="modal fade" id="policemanDetails" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
@@ -91,6 +100,15 @@
             </div>
         </div>
     </div>
+
+    
+
+
+    
+    
+
+    
+
     <script>
         function closePolicemanModal() {
             $('#policemanDetails .close').click();
