--- a/MIS/Views/CriminalRecord/Index.cshtml
+++ b/MIS/Views/CriminalRecord/Index.cshtml
@@ -29,11 +29,12 @@
 
         </ul>
     </div>
+
     <div class="d-inline-flex p-md-5">
         <form asp-controller="CriminalRecord" asp-action="Index" method="get" id="searchForm" style="display:none">
             <div class="search">
-                <input type="search" class="search-input" placeholder="Search..." name="filterValue">
-                <input type="hidden" class="search-input" placeholder="Policeman..." name="searchFlag" value="0">
+                <input type="search" class="search-input" placeholder="Search..." name="Term">
+                <input type="hidden" class="search-input" placeholder="Search..." name="Name" value="recordName">
                 <button type="submit" class="search-icon" value="Filter">
                     <i class="fa fa-search"> </i>
                 </button>
@@ -41,7 +42,7 @@
         </form>
     </div>  
 
-    <div class="d-inline-flex p-md-5">
+    @*<div class="d-inline-flex p-md-5">
         <form asp-controller="CriminalRecord" asp-action="Index" method="get" id="searchFormAdmin"  style="display:none">
             <div class="search">
                 <input type="search" class="search-input" placeholder="Policeman..." name="filterValue">
@@ -51,7 +52,8 @@
                 </button>
             </div>
         </form>
-    </div>   
+    </div> 
+    
     <div class="d-inline-flex p-md-5">
         <form asp-controller="CriminalRecord" asp-action="Index" method="get" id="searchFormSection"  style="display:none">
             <div class="search">
@@ -62,7 +64,7 @@
                 </button>
             </div>
         </form>
-    </div>
+    </div>*@
 </div>
 
 <partial name="_Records" />
