--- a/MIS/Views/PoliceSection/Index.cshtml
+++ b/MIS/Views/PoliceSection/Index.cshtml
@@ -98,13 +98,15 @@
         var geocoder;
 
         function initMap() {
-            // The location of Craiova
-
+            
+            //centrul romaniei
             const sibiu = { lat: 45.7958, lng: 24.1522 };
+
             const map = new google.maps.Map(document.getElementById("map"), {
                 zoom: 6.2,
                 center: sibiu,
             });
+
             geocoder = new google.maps.Geocoder()
         $.ajax({
             url: "/PoliceSection/GetSectionsAddress",
