fix other issues

--- a/MIS/Views/PoliceSection/Hierarchy.cshtml
+++ b/MIS/Views/PoliceSection/Hierarchy.cshtml
@@ -11,17 +11,17 @@
         width: 500px;
     }
 
-    span {
-    #normalSpan {
+    span 
+     {
         border: 2px solid #fff !important;
         border-radius: 4px;
         cursor: pointer;
         box-shadow: 0 3px 1px -2px rgb(0 0 0 / 20%), 0 2px 2px 0 rgb(0 0 0 / 14%), 0 1px 5px 0 rgb(0 0 0 / 12%);
     }
 
-        span:hover + ul span {
-            border: 2px solid #3367d6 !important;
-        }
+    span:hover + ul span {
+        border: 2px solid #3367d6 !important;
+    }
 
     .input-group .form-control {
         margin: 0px !important;
