capital letter buttons

--- a/MIS/Views/CriminalRecord/_Records.cshtml
+++ b/MIS/Views/CriminalRecord/_Records.cshtml
@@ -8,12 +8,12 @@
             <span class="record-date"><i class="far fa-clock"></i> date : <span> @record.CreatedOn</span></span>
             <div class="record-options">
 
-                <a href="#editCriminalRecord" class="btn btn-record-edit" onclick="loadEditModal('@record.Id', '@record.Name', '@record.Description', '@record.Type')"><i class="far fa-edit" style="font-size : 12px;"></i> edit</a>
+                <a href="#editCriminalRecord" class="btn btn-record-edit" style="font-style:initial" onclick="loadEditModal('@record.Id', '@record.Name', '@record.Description', '@record.Type')"><i class="far fa-edit" style="font-size : 12px;"></i> Edit</a>
                 <form asp-action="Delete" asp-controller="CriminalRecord" asp-route-id="@record.Id">
                     <button type="submit" class="btn btn-record-delete">
                         <i class="fas fa-trash" style="font-size : 12px;">
 
-                        </i> delete
+                        </i> Delete
                     </button>
                 </form>
 
