police section commit 8

--- a/MIS/Views/Shared/_Layout.cshtml
+++ b/MIS/Views/Shared/_Layout.cshtml
@@ -35,7 +35,10 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="PoliceSection" asp-action="Index">Privacy</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-controller="MeetingRequest" asp-action="Index" asp-area="" 
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Policeman" asp-action="Index">Policemen</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-controller="MeetingRequest" asp-action="Index" asp-area=""
                                data-toggle="modal" data-ajax-update="#requestsBody" data-target="#requestsModal" data-ajax="true">  Requests</a>
                         </li>
                     </ul>
